# nRDMS

hw-1-redis/: pyproject.toml
hw-1-redis/src/hw_1_redis/: __main__.py
hw-2-nrdms-schema/: e-commerce.dmm
hw-3-mongodb/: README.md  docker-compose.yaml
hw-3-mongodb/schema/: category-schema.json  product-schema.json  user-schema.json
hw-3-mssql-xml/: README.md  xml.sql
