[project]
name = "hw-1-redis"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykhailo Maslov",email = "maslov.mikhail200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "hw_1_redis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
